[misc] Apply codestyle